--- a/dropins/gsma-authenticators/pom.xml
+++ b/dropins/gsma-authenticators/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<org.wso2.carbon.identity.application.common.version>4.4.0</org.wso2.carbon.identity.application.common.version>
 		<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>
+		<commons-codec.version>1.9</commons-codec.version>
 	</properties>
 
 	<dependencies>
@@ -54,6 +55,11 @@
 			<artifactId>com.wso2telco.ids.urlshorten</artifactId>
 			<version>${com.wso2telco.ids.urlshorten.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${commons-codec.version}</version>
 		</dependency>
 
 
