--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<gson.version>2.1</gson.version>
 		<com.wso2telco.ids.urlshorten.version>1.0.0-SNAPSHOT</com.wso2telco.ids.urlshorten.version>
 		<com.wso2telco.ids.authentic.selector.version>1.0.0-SNAPSHOT</com.wso2telco.ids.authentic.selector.version>
+		<url.shorten.version>1.0.0-SNAPSHOT</url.shorten.version>
 	</properties>
 
 	<dependencies>
