--- a/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
+++ b/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
@@ -19,7 +19,7 @@
     <!--dependencies>
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
-            <artifactId>user-claim-retriever</artifactId>
+            <artifactId>url-shorten</artifactId>
             <version>${org.wso2telco.ids.version}</version>
         </dependency>
     </dependencies-->
@@ -47,9 +47,11 @@
                                 </properties>
                             </adviceFile>
                             <bundles>
-                                <bundleDef>com.wso2telco.ids:user-claim-retriever:${org.wso2telco.ids.version}</bundleDef>
-				<bundleDef>org.wso2.carbon:org.wso2.carbon.logging:${carbon.kernel.version}</bundleDef>
+                                <bundleDef>com.wso2telco.ids:openid-token-builder:${org.wso2telco.ids.version}</bundleDef>
                             </bundles>
+				<!--importFeatures>
+					<importFeatureDef>org.wso2.orbit.org.apache.httpcomponents:httpclient</importFeatureDef>
+				</importFeatures-->
                         </configuration>
                     </execution>
                 </executions>
