--- a/components/dropins/openid-token-builder/pom.xml
+++ b/components/dropins/openid-token-builder/pom.xml
@@ -47,6 +47,7 @@
 		<dependency>
 			<groupId>org.apache.amber.wso2</groupId>
 			<artifactId>amber</artifactId>
+			<version>${org.wso2.amber.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
@@ -57,6 +58,7 @@
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
+			<version>${httpclient.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
