--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -15,6 +15,7 @@
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -25,7 +26,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.wso2telco.core</groupId>
-			<artifactId>core-dutils</artifactId>
+			<artifactId>dbutils</artifactId>
 		</dependency>
 
 	</dependencies>
