--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		<module>components/user-claim-retriever</module>
 		<module>components/authenticate-selector</module>
 		<module>components/gsma-authenticators</module>
+		<module>components/openid-token-builder</module>
 		<module>features</module>
 		<!--module>webapps</module -->
 	</modules>
