--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -28,7 +28,47 @@
 			<groupId>org.wso2telco.core</groupId>
 			<artifactId>dbutils</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.amber.wso2</groupId>
+			<artifactId>amber</artifactId>
+			<version>${org.wso2.amber.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.sling</groupId>
+			<artifactId>org.apache.sling.commons.json</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.core</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.apimgt.impl</artifactId>
+			<version>${org.wso2.carbon.apimgt.impl.version}</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 
 </project>
