--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -39,16 +39,15 @@
 		<dependency>
 			<groupId>org.apache.amber.wso2</groupId>
 			<artifactId>amber</artifactId>
-			<version>${org.wso2.amber.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.logging</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-		</dependency>
+				<groupId>commons-httpclient.wso2</groupId>
+				<artifactId>commons-httpclient</artifactId>
+			</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.commons.json</artifactId>
@@ -62,13 +61,43 @@
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.core</artifactId>
 		</dependency>
-		
 		<dependency>
-			<groupId>org.wso2.carbon</groupId>
-			<artifactId>org.wso2.carbon.apimgt.impl</artifactId>
-			<version>${org.wso2.carbon.apimgt.impl.version}</version>
-			<type>jar</type>
-		</dependency>
+				<groupId>com.wso2telco.ids</groupId>
+				<artifactId>gsma-authenticator</artifactId>
+			</dependency>
 	</dependencies>
+	
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<version>${maven.bundle.plugin.version}</version>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Name>${project.artifactId}</Bundle-Name>
+						<Import-Package>
+							org.apache.commons.logging.*; version="1.0.4",
+							org.wso2.carbon.identity.base.*,
+							org.wso2.carbon.identity.core.*,
+							org.wso2.carbon.identity.oauth.*,
+							org.wso2.carbon.identity.openidconnect.*,
+							*;resolution:=optional
+						</Import-Package>
+						<Export-Package>
+							com.axiata.dialog.*
+						</Export-Package>
+						<Embed-Dependency>
+							nimbus-jose-jwt|json-smart;scope=compile|runtime;inline=false
+						</Embed-Dependency>
+						<DynamicImport-Package>*</DynamicImport-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
