--- a/pom.xml
+++ b/pom.xml
@@ -2116,16 +2116,14 @@
 		<org.wso2telco.ids.version>1.0.0-SNAPSHOT</org.wso2telco.ids.version>
 		<org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
 		<org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
-		<org.wso2.carbon.identity.provider.version>5.0.7</org.wso2.carbon.identity.provider.version>
-		<org.wso2.carbon.identity.oauth.version>5.0.7</org.wso2.carbon.identity.oauth.version>
-		<maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
-		<commons.logging>1.2</commons.logging>
+		<!--org.wso2.carbon.identity.provider.version>5.0.7</org.wso2.carbon.identity.provider.version-->
+		<!--org.wso2.carbon.identity.oauth.version>5.0.7</org.wso2.carbon.identity.oauth.version-->
+		<!--maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version-->
+		<!--commons.logging>1.2</commons.logging-->
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
-		<junit.version>4.4</junit.version>
-		<commons.lang.version>2.3</commons.lang.version>
+		<!--commons.lang.version>2.3</commons.lang.version-->
 		<mnc.resolver.version>1.0.0-SNAPSHOT</mnc.resolver.version>
 		<httpclient.version>4.3.1</httpclient.version>
-		<gson.version>2.1</gson.version>
 		<com.wso2telco.ids.urlshorten.version>1.0.0-SNAPSHOT</com.wso2telco.ids.urlshorten.version>
 		<authentic.selector.version>1.0.0-SNAPSHOT</authentic.selector.version>
 		<com.gsma.authenticators.version>1.0.0-SNAPSHOT</com.gsma.authenticators.version>
