--- a/components/authentication-endpoint/pom.xml
+++ b/components/authentication-endpoint/pom.xml
@@ -19,7 +19,7 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>webapps</artifactId>
+		<artifactId>component-ids</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
