--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		<module>components/authenticate-selector</module>
 		<module>components/gsma-authenticators</module>
 		<module>components/openid-token-builder</module>
+		<module>components/session-updater</module>
 		<module>features</module>
 		<!--module>webapps</module -->
 	</modules>
@@ -2134,6 +2135,14 @@
 		<com.gsma.authenticators.version>1.0.0-SNAPSHOT</com.gsma.authenticators.version>
 		<url.shorten.version>1.0.0-SNAPSHOT</url.shorten.version>
 		<maven.bundle.plugin.version>2.3.7</maven.bundle.plugin.version>
+
+		<commons-fileupload.version>1.2.0.wso2v1</commons-fileupload.version>
+        <maven-compiler-plugin.version>1.7</maven-compiler-plugin.version>
+        <maven-war-plugin.version>2.2</maven-war-plugin.version>
+        <org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
+        <jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
+        <javax.ws.rs.version>1.0</javax.ws.rs.version>
+
 	</properties>
 
 	<build>
