--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -13,8 +13,8 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -33,7 +33,7 @@
 			<groupId>org.json.wso2</groupId>
 			<artifactId>json</artifactId>
 			<version>${org.json.wso2.version}</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.authenticator.stub</artifactId>
@@ -68,6 +68,11 @@
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs</artifactId>
 			<version>${javax.ws.rs.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${com.google.code.gson.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
