--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2292,7 +2292,7 @@
 							</execution>
 						</executions>
 						<configuration>
-                        			<additionalparam>-Xdoclint:none</additionalparam>
+                        			<!--additionalparam>-Xdoclint:none</additionalparam-->
 			                        </configuration>
 					</plugin>
 		</plugins>
