--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,7 +21,7 @@
 	<groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>2.0.6-SNAPSHOT</version>
+	<version>2.0.7</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Perent pom</description>
 	<url>http://wso2telco.com</url>
@@ -48,7 +48,7 @@
                 <url>https://github.com/WSO2Telco/component-ids.git</url>
                 <developerConnection>scm:git:https://github.com/WSO2Telco/component-ids.git</developerConnection>
                 <connection>scm:git:https://github.com/WSO2Telco/component-ids.git</connection>
-                <tag>HEAD</tag>
+                <tag>component-ids-2.0.7</tag>
         </scm>
 
 
