--- a/features/pom.xml
+++ b/features/pom.xml
@@ -19,6 +19,9 @@
 		<module>com.wso2telco.ids.authenticationendpoint.ui.feature</module>
 		<module>com.wso2telco.ids.sessionupdater.ui.feature</module>
 		<module>com.wso2telco.ids.operatorproxyservice.ui.feature</module>
+		<module>com.wso2telco.ids.dashboard.ui.feature</module>
+		<module>com.wso2telco.ids.portal.ui.feature</module>
+		<module>com.wso2telco.ids.sign.ui.feature</module>
 	</modules>
 
 </project>
