--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-                <version>2.0.03</version>
+                <version>2.0.22-SNAPSHOT</version>
                 <relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
