--- a/components/authenticate-selector/pom.xml
+++ b/components/authenticate-selector/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-                <version>2.0.04</version>
+                <version>2.0.05-SNAPSHOT</version>
                 <relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
