--- a/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
+++ b/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
@@ -46,6 +46,7 @@
                             </adviceFile>
                             <bundles>
                                 <bundleDef>com.wso2telco.ids:openid-token-builder:${com.wso2telco.ids.version}</bundleDef>
+				 <bundleDef>com.jayway.jsonpath.wso2:json-path:${com.jayway.jsonpath.wso2.version}</bundleDef>
                             </bundles>
 				<!--importFeatures>
 					<importFeatureDef>org.wso2.orbit.org.apache.httpcomponents:httpclient</importFeatureDef>
