--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -128,6 +128,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+ 			<dependency>
+	                        <groupId>com.jayway.jsonpath.wso2</groupId>
+                	        <artifactId>json-path</artifactId>
+				<version>${com.jayway.jsonpath.wso2.version}</version>
+	                </dependency>
 
 			<dependency>
 				<groupId>org.json</groupId>
@@ -1959,6 +1964,8 @@
 
 	</dependencyManagement>
 	<properties>
+		<com.jayway.jsonpath.wso2.version>1.2.0.wso2v1</com.jayway.jsonpath.wso2.version>
+
 		<!--User registration properties -->
 		<com.sun.jersey.version>1.8</com.sun.jersey.version>
 		<com.ibm.icu.version>2.6.1</com.ibm.icu.version>
