--- a/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
+++ b/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
@@ -3,7 +3,7 @@
     <parent>
        <groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids-feature</artifactId>
-        <version>2.0.09</version>
+        <version>2.0.24-SNAPSHOT</version>
 	<relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
