--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -139,16 +139,16 @@
 		<!--dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-server</artifactId> 
 			<version>1.17.1</version> </dependency -->
 
-		<!-- dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-core</artifactId>
-			<version>1.17.1</version>
-		</dependency-->
-		<!-- dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.sun.jersey</groupId> -->
+<!-- 			<artifactId>jersey-core</artifactId> -->
+<!-- 			<version>1.17.1</version> -->
+<!-- 		</dependency> -->
+		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-servlet</artifactId>
 			<version>1.17.1</version>
-		</dependency-->
+		</dependency>
 
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
