--- a/components/operator-proxy-service/pom.xml
+++ b/components/operator-proxy-service/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-		<version>2.0.12</version>
+		<version>2.0.13-SNAPSHOT</version>
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
