--- a/components/url-shorten/pom.xml
+++ b/components/url-shorten/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-                <version>2.0.12-SNAPSHOT</version>
+                <version>2.0.13</version>
                 <relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
