--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 
 	
 	<modules>
-		<module>parent</module>
+		<!--module>parent</module>
 		<module>components/url-shorten</module>
 		<module>components/user-claim-retriever</module>
 	       <module>components/authenticate-selector</module>
@@ -64,9 +64,9 @@
 		<module>components/sign</module>
 		<module>components/session-updater</module>
 		<module>components/portal</module>
-		<module>components/dashboard</module>
+		<module>components/dashboard</module-->
 		<module>components/authentication-endpoint</module>
-		<module>features</module> 
+		<!--module>features</module--> 
 	</modules>
 
 	<scm>
