--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-                <version>2.0.13</version>
+                <version>2.0.14-SNAPSHOT</version>
                 <relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
@@ -124,9 +124,4 @@
 	<profiles>
 		
 	</profiles>
-
-
-  <scm>
-    <tag>v2_0_13_01</tag>
-  </scm>
 </project>
