--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -116,6 +116,7 @@
             <groupId>com.wso2telco.core</groupId>
             <artifactId>sp-config-util</artifactId>
             <version>2.0.4-SNAPSHOT</version>
+			<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
