--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -122,6 +122,7 @@
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
             <version>2.0.13</version>
+			<scope>provided</scope>
         </dependency>
     </dependencies>
 	<build>
