--- a/components/ids-data-publisher/pom.xml
+++ b/components/ids-data-publisher/pom.xml
@@ -84,8 +84,8 @@
                 <configuration>
                     <instructions>
                         <Bundle-Vendor>WSO2Telco</Bundle-Vendor>
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Export-Package>com.wso2telco.ids.datapublisher.*</Export-Package>
+                        <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package>!com.wso2telco.ids.datapublisher.internal, com.wso2telco.ids.datapublisher.*</Export-Package>
                         <Import-Package></Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
