--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -84,11 +84,11 @@
         <artifactId>config-util</artifactId>
         <scope>provided</scope>
     </dependency>
-    <dependency>
-        <groupId>com.wso2telco.core</groupId>
-        <artifactId>dbutils</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
-    </dependency>
+    <!--<dependency>-->
+        <!--<groupId>com.wso2telco.core</groupId>-->
+        <!--<artifactId>dbutils</artifactId>-->
+        <!--<version>2.0.4-SNAPSHOT</version>-->
+    <!--</dependency>-->
     <dependency>
         <groupId>org.wso2.carbon.identity</groupId>
         <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
