--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -159,8 +159,7 @@
                             org.wso2.carbon.user.core.service; version="${carbon.kernel.package.import.version.range}",
                             org.wso2.carbon.user.core.util; version="${carbon.kernel.package.import.version.range}",
                             org.wso2.carbon.utils.multitenancy; version="${carbon.kernel.package.import.version.range}",
-							com.wso2telco.core.config.*,
-							com.wso2telco.core.mnc.resolver.*
+							com.wso2telco.core.config.*
 						</Import-Package>
 						<Export-Package>com.wso2telco.gsma*, com.wso2telco.historylog.*</Export-Package>
 						<DynamicImport-Package>*</DynamicImport-Package>
