--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -32,10 +32,10 @@
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.common</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.wso2telco.core</groupId>
-			<artifactId>dbutils</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.wso2telco.core</groupId>-->
+			<!--<artifactId>dbutils</artifactId>-->
+		<!--</dependency>-->
         <dependency>
             <groupId>com.wso2telco.core</groupId>
             <artifactId>config-util</artifactId>
@@ -152,7 +152,6 @@
 							org.wso2.carbon.idp.mgt;
 							version="${carbon.identity.package.import.version.range}",
 							com.wso2telco.core.config.*,
-							com.wso2telco.core.dbutils.*,
 							com.wso2telco.dbutils.*
 						</Import-Package>
 						<Export-Package>
