--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -94,6 +94,12 @@
         <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>com.wso2telco.ids</groupId>
+        <artifactId>ids-data-publisher</artifactId>
+        <version>2.0.13</version>
+        <scope>provided</scope>
+    </dependency>
 </dependencies>
 
 <build>
