--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -79,6 +79,12 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.wso2telco.ids</groupId>
+            <artifactId>ids-data-publisher</artifactId>
+            <version>2.0.13</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
