--- a/features/pom.xml
+++ b/features/pom.xml
@@ -25,6 +25,7 @@
 		<module>com.wso2telco.ids.portal.ui.feature</module>
 		<module>com.wso2telco.ids.sign.ui.feature</module>
 		<module>com.wso2telco.ids.datapublisher.feature</module>
-	</modules>
+        <module>com.wso2telco.ids.saaserver.feature</module>
+    </modules>
 
 </project>
